<?xml version="1.0"?>
<package format="3">
  <name>mape_k_interfaces</name>
  <version>0.0.1</version>
  <description>The mape_k_interfaces package</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
