<?xml version="1.0"?>
<package format="3">
    <name>movement</name>
    <version>0.0.1</version>
    <description>The movement package</description>
    <maintainer email="xunanin@gmail.com">Xurxo Nanín</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>ament_python</buildtool_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>python3</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>

</package>