<?xml version="1.0"?>
<package format="3">
  <name>odom_tf_broadcaster</name>
  <version>0.1.0</version>
  <description>Bridges nav_msgs/Odometry to TF (odom->base frame) per robot namespace.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
